# panda-uefi

./: .gitignore  Cargo.toml  Makefile
ata/: Cargo.toml
ata/src/: lib.rs
eisaid/: Cargo.toml
eisaid/src/: lib.rs
panda-kernel/: Cargo.toml  linker.ld  x86_64-panda-elf.json
panda-kernel/.cargo/: config.toml
panda-kernel/src/: acpi.rs  alloc.rs  console.rs  display.rs  error.rs  lib.rs  logger.rs  panic.rs  pci.rs  task.rs
panda-kernel/src/acpi/: aml_handler.rs  handler.rs
panda-kernel/src/devices/: mod.rs
panda-kernel/src/devices/address/: acpi_device_address.rs  mod.rs  pci_device_address.rs
panda-kernel/src/devices/classes/: mod.rs
panda-kernel/src/devices/drivers/: mod.rs  pc_keyboard.rs  pci_host_bridge.rs
panda-kernel/src/devices/drivers/ahci_controller/: ahci_controller.rs  ahci_port.rs  ahci_register.rs  mod.rs
panda-kernel/src/devices/drivers/ahci_controller/ahci_port/: ahci_command.rs  ahci_command_table.rs  ahci_physical_region_descriptor.rs  commands.rs  fis.rs  mod.rs  port.rs  register.rs
panda-kernel/src/devices/drivers/ahci_controller/ahci_port/commands/: identify.rs  read.rs  read_connected_status.rs  send_ata_command.rs
panda-kernel/src/devices/drivers/ahci_controller/ahci_port/fis/: device_to_host_fis.rs  host_to_device_fis.rs
panda-kernel/src/devices/drivers/ahci_controller/ahci_port/ide/: ide_identify.rs  mod.rs
panda-kernel/src/devices/drivers/ahci_controller/registers/: ahci_command_status_register.rs  ahci_global_hba_control.rs  ahci_hba_capabilities_register.rs  ahci_pci_command_register.rs  ahci_port_interrupt_enable_register.rs  ahci_port_interrupt_status_register.rs  ahci_port_sata_control_register.rs  ahci_port_sata_status_register.rs  ahci_port_task_file_data_register.rs  bios_os_control_status.rs  mod.rs
panda-kernel/src/interrupts/: mod.rs  page_fault.rs
panda-kernel/src/irq/: interrupts.rs  mod.rs
panda-kernel/src/memory/: frame_allocator.rs  mod.rs
panda-kernel/src/task/: executor.rs  id.rs  task.rs  task_waker.rs
panda-kernel/src/util/: async_flag.rs  async_ring_queue.rs  mod.rs
panda-loader/: Cargo.toml  x86_64-none-efi.json
panda-loader-lib/: Cargo.toml
panda-loader-lib/src/: frame_buffer.rs  lib.rs  memory_descriptor.rs
panda-loader/.cargo/: config.toml
panda-loader/src/: display.rs  loader.rs  logging.rs  main.rs  panic.rs
panda-loader/src/loader/: elf.rs
