[package]
name = "panda-loader"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

[dependencies]
panda-loader-lib = { path = "../panda-loader-lib" }
uefi = { version = "0.15", default-features = false, features=['alloc'] }
log = { version = "0.4.16", default-features = false }
spin = "0.9"
x86_64 = { version = "0.14.8" }
uart_16550 = { version = "0.2" }

[dependencies.goblin]
version = "0.5"
default-features = false
features = ['alloc', 'endian_fd', 'elf32', 'elf64', 'pe32', 'pe64', 'mach32', 'mach64', 'archive']

[dependencies.conquer-once]
version = "0.3.2"
default-features = false
